CollapsibleList numItemsVisible correction

--- a/grapher/controls/CollapsibleList/CollapsibleList.scss
+++ b/grapher/controls/CollapsibleList/CollapsibleList.scss
@@ -4,7 +4,8 @@
     ul {
         list-style: none;
         > .list-item {
-            &.visible {
+            &.visible,
+            &.moreButton {
                 display: inline-block;
 
                 padding-left: 15px;
